Changes to make site mobile responsive

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <a href="https://www.instagram.com/avalon_army/"><i class="fab fa-instagram footer-ico"></i></a>
       <i class="fas fa-envelope footer-ico"></i>
 
-      <p>© Copyright 2020 Avalon Army</p>
+      <p class="footer-text">© Copyright 2020 Avalon Army</p>
     </div>
   </footer>
 
