--- a/listing.html
+++ b/listing.html
@@ -24,323 +24,331 @@
 <body>
 
 
-<section class="top">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-6 col-md-6">
-        <img class="top-img"src="images/avalon.jpg" alt="">
-        <h1>Avalon Army Main</h1>
-        <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalontelegram"><i class="fab fa-telegram-plane"> </i> Click here</a>
-      </div>
-      <div class="col-lg-6 col-md-6">
-        <img class="top-img"src="images/finance.jpg" alt="">
-        <h1>Avalon Meta Finance</h1>
-        <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/Ja-B4BaUuwhQg3hcg3-LKw"><i class="fab fa-telegram-plane"> </i> Click here</a>
 
+  <section class="top">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-6 col-md-6">
+          <img class="top-img" src="images/avalon.jpg" alt="">
+          <h1>Avalon Army Main</h1>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalontelegram"><i class="fab fa-telegram-plane"> </i> Click here</a>
+        </div>
+        <div class="col-lg-6 col-md-6">
+          <img class="top-img" src="images/finance.jpg" alt="">
+          <h1>Avalon Meta Finance</h1>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/Ja-B4BaUuwhQg3hcg3-LKw"><i class="fab fa-telegram-plane"> </i> Click here</a>
+
+        </div>
+        <div class="col-lg-12 col-md-12">
+          <img class=" politics-img" src="images/politics.jpg" alt="">
+          <h1>Avalon Politics</h1>
+          <p>Note: Have an open mind to other's opinion</p>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/M6NjVxYF3ybr8-307Ez_Ww"><i class="fab fa-telegram-plane"> </i> Click here</a>
+
+        </div>
       </div>
     </div>
-  </div>
 
-</section>
+  </section>
 
 
   <section class="colored-section" id="card">
-<div class="container-fluid">
+    <div class="container-fluid">
 
 
-    <div class="title-text">
-      <h1>Link to all regional Avalon Groups are below</h1>
-    </div>
-
-
-
-
-
-    <div class="row">
-
-      <div class="card-col col-lg-4 col-md-6">
-
-
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Mumbai</h3>
-
-          </div>
-          <div class="card-body">
-            <a class="btn btn-dark btn-block btn-lg" type="button" href="https://t.me/joinchat/CmVtkFYpaC0ADh72D8m-Ww"><i class="fab fa-telegram-plane"> </i> Join Now</a>
-          </div>
-
-        </div>
+      <div class="title-text">
+        <h1>Link to all regional Avalon Groups are below</h1>
       </div>
 
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Pune</h3>
+
+
+
+      <div class="row">
+
+        <div class="card-col col-lg-4 col-md-6">
+
+
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Mumbai</h3>
+
+            </div>
+            <div class="card-body">
+              <a class="btn btn-light btn-block btn-lg" type="button" href="https://t.me/joinchat/CmVtkFYpaC0ADh72D8m-Ww"><i class="fab fa-telegram-plane"> </i> Join Now</a>
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href="http://t.me/avalonpune"><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Ahemdabad</h3>
+
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Pune</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href="http://t.me/avalonpune"><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
 
           </div>
-          <div class="card-body">
-
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" http://t.me/avalonahmedabad" >Sign Up</a>
-
-          </div>
-
         </div>
-      </div>
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Bihar</h3>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Ahemdabad</h3>
+
+            </div>
+            <div class="card-body">
+
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href="http://t.me/avalonpune"><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" https://t.me/joinchat/LBH37hUSimLeC-aS0YTZOg "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Bihar</h3>
+            </div>
+            <div class="card-body">
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Bangalore</h3>
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/LBH37hUSimLeC-aS0YTZOg "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href="https://t.me/joinchat/NmNlgBSae5R9-nXF49gQkA  "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Jharkhand</h3>
+
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Bangalore</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href="https://t.me/joinchat/NmNlgBSae5R9-nXF49gQkA  "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" https://t.me/joinchat/LZohlxI6DCf98bthlIzOHQ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Hydrabad</h3>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Jharkhand</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/LZohlxI6DCf98bthlIzOHQ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" http://t.me/avalonhydrabad  "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Hydrabad</h3>
+            </div>
+            <div class="card-body">
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Delhi NRC</h3>
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" http://t.me/avalonhydrabad  "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" https://t.me/joinchat/MMDHZE13k-1DP8dbklKG0w "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Baroda</h3>
+
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Delhi NCR</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/MMDHZE13k-1DP8dbklKG0w "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" https://t.me/joinchat/JVfQzBfJFmC3MO4idEkqsQ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Coimbatore</h3>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Baroda</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/JVfQzBfJFmC3MO4idEkqsQ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" https://t.me/joinchat/OLIh2BWLnniIFS1fj4BXMQ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Uttrakhand</h3>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Coimbatore</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/OLIh2BWLnniIFS1fj4BXMQ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" https://t.me/joinchat/KdM5Vw7aAa4bVd-V0eFjQw "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Kolkata</h3>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Uttrakhand</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/KdM5Vw7aAa4bVd-V0eFjQw "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" https://t.me/joinchat/I9YvpxP59QPpqKJRwJ9FNQ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Up East</h3>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Kolkata</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/I9YvpxP59QPpqKJRwJ9FNQ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" http://t.me/avalonupeast "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Chennai</h3>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Up East</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" http://t.me/avalonupeast "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" https://t.me/joinchat/Ja-B4BOWlsI_SXG95_acCQ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
 
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Punjab</h3>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Chennai</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/Ja-B4BOWlsI_SXG95_acCQ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" https://t.me/joinchat/PU9VGRdFofkrgZuZJXI8DQ  "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Jaipur</h3>
+
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Punjab</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/PU9VGRdFofkrgZuZJXI8DQ  "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" http://t.me/jaipuravalon "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Nagpur</h3>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Jaipur</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" http://t.me/jaipuravalon "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" https://t.me/joinchat/LumCYhbbUShBfx-dRGPgIg "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
-      <div class="card-col col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Avalon Lucknow</h3>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Nagpur</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/LumCYhbbUShBfx-dRGPgIg "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
           </div>
-          <div class="card-body">
-
-            <a class="btn btn-dark btn-block btn-lg" type="button" href=" https://t.me/avalonlucknow "><i class="fab fa-telegram-plane"> </i> Join Now</a>
-
-          </div>
-
         </div>
-      </div>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Lucknow</h3>
+            </div>
+            <div class="card-body">
 
-    </div>
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/avalonlucknow "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
+
+      </div>
     </div>
 
   </section>
 
 
 
-<!-- form -->
+  <!-- form -->
   <section class="black-section">
 
-<div class="container-fluid">
+    <div class="container-fluid">
 
 
-<h1 class="form-heading">Fill this form If your city/region is not in the list</h1>
-<a class="btn btn-light btn-lg" type="button" href=" https://docs.google.com/forms/d/e/1FAIpQLSdffCCfRyc5Rye18D_YZ9SsnzjHjKt7eXqEAVw4hhSxEPnWUQ/viewform "><i class="fab fa-telegram-plane"> </i> Click here</a>
-</div>
+      <h1 class="form-heading">Fill this form If your city/region is not in the list</h1>
+      <a class="btn btn-light btn-lg" type="button" href=" https://docs.google.com/forms/d/e/1FAIpQLSdffCCfRyc5Rye18D_YZ9SsnzjHjKt7eXqEAVw4hhSxEPnWUQ/viewform "><i class="fab fa-telegram-plane"> </i> Click here</a>
+    </div>
   </section>
 
 
-<!-- footer -->
+  <!-- footer -->
   <footer class="black-section" id="footer">
-      <div class="container-fluid">
-        <a href="https://www.instagram.com/avalon_army/"><i class="fab fa-instagram footer-ico"></i></a>
-        <i class="fas fa-envelope footer-ico"></i>
+    <div class="container-fluid">
+      <a href="https://www.instagram.com/avalon_army/"><i class="fab fa-instagram footer-ico"></i></a>
+      <i class="fas fa-envelope footer-ico"></i>
 
-        <p>© Copyright 2020 AvalonArmy</p>
-      </div>
-    </footer>
+      <p>© Copyright 2020 AvalonArmy</p>
+    </div>
+  </footer>
 
 
 
