--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark ">
-        <img class="logo"src="images/logo.png" alt="">
-        <a class="navbar-brand logo-text" href="">Army</a>
+
+        <a class="navbar-brand logo-text" href="">
+  <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
+          Army</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
           <span class="navbar-toggler-icon"></span>
         </button>
