--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
 
         <a class="navbar-brand logo-text" href="">
   <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
-          Army</a>
+          </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item mr-2">
+              <a class="nav-link" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item mr-2">
+              <a class="nav-link" href="/gallery.html">Gallery</a>
+            </li>
             <li class="nav-item mr-2">
               <a class="nav-link" href="/listing.html">Group List</a>
             </li>
