--- a/listing.html
+++ b/listing.html
@@ -25,8 +25,44 @@
 
 
 
-  <section class="top">
+  <section class="top" id="top-title">
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark ">
+
+        <a class="navbar-brand logo-text" href="">
+      <img src="images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
+          </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mr-2">
+              <a class="nav-link" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item mr-2">
+              <a class="nav-link" href="/gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item mr-2">
+              <a class="nav-link" href="/listing.html">Group List</a>
+            </li>
+          </ul>
+
+        </div>
+      </nav>
+
       <div class="row">
         <div class="col-lg-6 col-md-6">
           <img class="top-img" src="images/avalon.jpg" alt="">
