--- a/listing.html
+++ b/listing.html
@@ -27,17 +27,6 @@
 
   <section class="top" id="top-title">
 
-
-
-
-
-
-
-
-
-
-
-
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark ">
 
@@ -64,22 +53,28 @@
       </nav>
 
       <div class="row">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 top-col">
           <img class="top-img" src="images/avalon.jpg" alt="">
           <h1>Avalon Army Main</h1>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalontelegram"><i class="fab fa-telegram-plane"> </i> Click here</a>
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 top-col">
           <img class="top-img" src="images/finance.jpg" alt="">
           <h1>Avalon Meta Finance</h1>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/Ja-B4BaUuwhQg3hcg3-LKw"><i class="fab fa-telegram-plane"> </i> Click here</a>
 
         </div>
-        <div class="col-lg-12 col-md-12">
-          <img class=" politics-img" src="images/politics.jpg" alt="">
+        <div class="col-lg-6 col-md-6 top-col">
+          <img class=" top-img" src="images/politics.jpg" alt="">
           <h1>Avalon Politics</h1>
           <p>Note: Have an open mind to other's opinion</p>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/M6NjVxYF3ybr8-307Ez_Ww"><i class="fab fa-telegram-plane"> </i> Click here</a>
+
+        </div>
+        <div class="col-lg-6 col-md-6 top-col">
+          <img class=" top-img" src="images/marketing.jpg" alt="">
+          <h1>Avalon Meta Marketing</h1>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/I--EORV6aQTikLUvh3jB5A"><i class="fab fa-telegram-plane"> </i> Click here</a>
 
         </div>
       </div>
