fixing typo and adding rajasthan

--- a/listing.html
+++ b/listing.html
@@ -130,7 +130,7 @@
         <div class="card-col col-lg-4 col-md-6">
           <div class="card border-light">
             <div class="card-header">
-              <h3 class="card-title">Avalon Ahemdabad</h3>
+              <h3 class="card-title">Avalon Ahmedabad</h3>
 
             </div>
             <div class="card-body">
@@ -189,7 +189,7 @@
         <div class="card-col col-lg-4 col-md-6">
           <div class="card border-light">
             <div class="card-header">
-              <h3 class="card-title">Avalon Hydrabad</h3>
+              <h3 class="card-title">Avalon Hyderabad</h3>
             </div>
             <div class="card-body">
 
@@ -346,6 +346,19 @@
             <div class="card-body">
 
               <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/avalonlucknow "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Rajasthan</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/avalonrajasthan "><i class="fab fa-telegram-plane"> </i> Join Now</a>
 
             </div>
 
