--- a/listing.html
+++ b/listing.html
@@ -364,6 +364,19 @@
 
           </div>
         </div>
+        <div class="card-col col-lg-4 col-md-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Bhopal</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/AvalonArmyBhopal "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
 
       </div>
     </div>
