--- a/listing.html
+++ b/listing.html
@@ -53,28 +53,33 @@
       </nav>
 
       <div class="row">
-        <div class="col-lg-6 col-md-6 top-col">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
           <img class="top-img" src="images/avalon.jpg" alt="">
           <h1>Avalon Army Main</h1>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalontelegram"><i class="fab fa-telegram-plane"> </i> Click here</a>
         </div>
-        <div class="col-lg-6 col-md-6 top-col">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
           <img class="top-img" src="images/finance.jpg" alt="">
           <h1>Avalon Meta Finance</h1>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/Ja-B4BaUuwhQg3hcg3-LKw"><i class="fab fa-telegram-plane"> </i> Click here</a>
 
         </div>
-        <div class="col-lg-6 col-md-6 top-col">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
+          <img class=" top-img" src="images/source.webp" alt="">
+          <h1>Avalon Source</h1>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonsource"><i class="fab fa-telegram-plane"> </i> Click here</a>
+
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
+          <img class=" top-img" src="images/politics.jpg" alt="">
+          <h1>Avalon Politics</h1>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/M6NjVxYF3ybr8-307Ez_Ww"><i class="fab fa-telegram-plane"> </i> Click here</a>
+
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
           <img class=" top-img" src="images/marketing.jpg" alt="">
           <h1>Avalon Meta Marketing</h1>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/I--EORV6aQTikLUvh3jB5A"><i class="fab fa-telegram-plane"> </i> Click here</a>
-
-        </div>
-        <div class="col-lg-6 col-md-6 top-col">
-          <img class=" top-img" src="images/politics.jpg" alt="">
-          <h1>Avalon Politics</h1>
-          <p>Note: Have an open mind to other's opinion</p>
-          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/M6NjVxYF3ybr8-307Ez_Ww"><i class="fab fa-telegram-plane"> </i> Click here</a>
 
         </div>
       </div>
@@ -97,7 +102,7 @@
 
       <div class="row">
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
 
 
           <div class="card border-light">
@@ -113,7 +118,7 @@
         </div>
 
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Pune</h3>
@@ -127,7 +132,7 @@
           </div>
         </div>
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Ahmedabad</h3>
@@ -143,7 +148,7 @@
           </div>
         </div>
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Bihar</h3>
@@ -158,7 +163,7 @@
         </div>
 
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Bangalore</h3>
@@ -172,7 +177,7 @@
           </div>
         </div>
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Jharkhand</h3>
@@ -186,7 +191,7 @@
           </div>
         </div>
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Hyderabad</h3>
@@ -201,7 +206,7 @@
         </div>
 
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Delhi NCR</h3>
@@ -215,7 +220,7 @@
           </div>
         </div>
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Baroda</h3>
@@ -229,7 +234,7 @@
           </div>
         </div>
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Coimbatore</h3>
@@ -243,7 +248,7 @@
           </div>
         </div>
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Uttrakhand</h3>
@@ -257,7 +262,7 @@
           </div>
         </div>
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Kolkata</h3>
@@ -271,7 +276,7 @@
           </div>
         </div>
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Up East</h3>
@@ -285,7 +290,7 @@
           </div>
         </div>
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Chennai</h3>
@@ -299,7 +304,7 @@
           </div>
         </div>
 
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Punjab</h3>
@@ -312,7 +317,7 @@
 
           </div>
         </div>
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Jaipur</h3>
@@ -325,7 +330,7 @@
 
           </div>
         </div>
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Nagpur</h3>
@@ -338,7 +343,7 @@
 
           </div>
         </div>
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Lucknow</h3>
@@ -351,7 +356,7 @@
 
           </div>
         </div>
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Rajasthan</h3>
@@ -364,7 +369,7 @@
 
           </div>
         </div>
-        <div class="card-col col-lg-4 col-md-6">
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
               <h3 class="card-title">Avalon Bhopal</h3>
