changing photos wo webp

--- a/listing.html
+++ b/listing.html
@@ -54,12 +54,12 @@
 
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
-          <img class="top-img" src="images/avalon.jpg" alt="">
+          <img class="top-img" src="images/avalon.webp" alt="">
           <h1>Avalon Army Main</h1>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalontelegram"><i class="fab fa-telegram-plane"> </i> Click here</a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
-          <img class="top-img" src="images/finance.jpg" alt="">
+          <img class="top-img" src="images/finance.webp" alt="">
           <h1>Avalon Meta Finance</h1>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/Ja-B4BaUuwhQg3hcg3-LKw"><i class="fab fa-telegram-plane"> </i> Click here</a>
 
