photos in index.html changed to webp

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="col-lg-6 ">
-          <img class="title-img" src="images/avalon.png" alt="iphone-mockup">
+          <img class="title-img" src="images/avalon-meta.webp" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -79,13 +79,13 @@
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active container-fluid">
-            <img src="/mumbai-1.jpg" class="d-block w-100 test-img" alt="...">
+            <img src="/mumbai-1.webp" class="d-block w-100 test-img" alt="...">
           </div>
           <div class="carousel-item container-fluid">
-            <img src="/mumbai-2.jpg" class="d-block w-100 test-img" alt="...">
+            <img src="/mumbai-2.webp" class="d-block w-100 test-img" alt="...">
           </div>
           <div class="carousel-item container-fluid">
-            <img src="/mumbai-3.jpg" class="d-block w-100" alt="...">
+            <img src="/mumbai-3.webp" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
