--- a/listing.html
+++ b/listing.html
@@ -410,7 +410,7 @@
 
 
   <!-- form -->
-  <section class="black-section">
+  <section class="black-section cta">
 
     <div class="container-fluid">
 
