--- a/listing.html
+++ b/listing.html
@@ -415,7 +415,7 @@
     <div class="container-fluid">
 
 
-      <h1 class="form-heading">Fill this form If your city/region is not in the list</h1>
+      <h1 class="cta-heading">Fill this form If your city/region is not in the list</h1>
       <a class="btn btn-light btn-lg" type="button" href=" https://docs.google.com/forms/d/e/1FAIpQLSdffCCfRyc5Rye18D_YZ9SsnzjHjKt7eXqEAVw4hhSxEPnWUQ/viewform "><i class="fab fa-telegram-plane"> </i> Click here</a>
     </div>
   </section>
