--- a/listing.html
+++ b/listing.html
@@ -8,7 +8,8 @@
   <!-- font awesome  -->
   <script src="https://kit.fontawesome.com/5392481572.js" crossorigin="anonymous"></script>
 
-
+<!-- google fonts -->
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900|Poiret+One&display=swap" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- local css -->
