--- a/listing.html
+++ b/listing.html
@@ -33,6 +33,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/site.webmanifest">
+  <!-- Sweet alert -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+  <!-- animate for sweet alert -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
   <title>Avalon Army groups </title>
 </head>
 
@@ -469,8 +474,32 @@
 
 
 
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+  <!-- sweetalert -->
+  <script type="text/javascript">
+    Swal.fire({
+      title: 'Avalon code is out',
+      text: 'If u havent checked it out click the link below',
+      imageUrl: 'http://avalon.army/images/alex.jpg',
+      imageWidth: 200,
+      imageHeight: 300,
+      imageAlt: 'Custom image',
+      showConfirmButton: false,
+      showCloseButton: true,
+      focusConfirm: false,
+      showClass: {
+        popup: 'animated bounceIn faster'
+      },
+      hideClass: {
+        popup: 'animated bounceOut faster'
+      },
+      footer: '<a href="https://avalon.army">Click here <i class="far fa-hand-point-left"></i> </a>'
+    })
+  </script>
+  <!-- Bootstrap scripts -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
