--- a/listing.html
+++ b/listing.html
@@ -483,7 +483,7 @@
     Swal.fire({
       title: 'Avalon code is out',
       text: 'If u havent checked it out click the link below',
-      imageUrl: 'http://avalon.army/images/alex.jpg',
+      imageUrl: '/alex.webp',
       imageWidth: 200,
       imageHeight: 300,
       imageAlt: 'Custom image',
