--- a/listing.html
+++ b/listing.html
@@ -117,6 +117,12 @@
 
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
+          <img class=" top-img" src="images/gaming.webp" alt="">
+          <h1>Avalon Gaming</h1>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalongaming"><i class="fab fa-telegram-plane"> </i> Click here</a>
+
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
           <img class=" top-img" src="images/avalon.webp" alt="">
           <h1>Avalon Discord</h1>
           <p class="listing-p">For audio discussion and listning to podcast together</p>
