Added Raipur Nashik Kalaburgi/Gulbarga Guwahati Saharanpur Vidarbha Bahrain

--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="/gallery.html">Gallery</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="/listing.html">Group List</a>
+              <a class="nav-link" href="/list.html">Group List</a>
             </li>
           </ul>
 
@@ -99,7 +99,7 @@
     <section class="cta" id="cta">
       <div class="container-fluid">
         <h1 class="cta-heading">To join the Avalon Regional groups</h1>
-        <a type="button" class="btn btn-dark btn-lg download-btn" href="/listing.html"><i class="fab fa-telegram-plane"></i> Click here</a>
+        <a type="button" class="btn btn-dark btn-lg download-btn" href="/list.html"><i class="fab fa-telegram-plane"></i> Click here</a>
 
 
         <!-- footer -->
