--- a/list.html
+++ b/list.html
@@ -27,7 +27,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- local css -->
-  <link rel="stylesheet" href="/css/listing.css">
+  <link rel="stylesheet" href="/css/list.css">
   <!-- favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -63,7 +63,7 @@
               <a class="nav-link" href="/gallery.html">Gallery</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="/listing.html">Group List</a>
+              <a class="nav-link" href="/list.html">Group List</a>
             </li>
           </ul>
 
@@ -463,6 +463,89 @@
             <div class="card-body">
 
               <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/avalonarmyraipur "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Nashik</h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/MetaNashik "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Kalaburgi/Gulbarga </h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/MDPfkBRt7iVNRcHWYBOwXQ
+ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Guwahati </h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/avalonguwahati
+ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Saharanpur </h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/IQyMzBedzhxbvV9jLrafkQ
+ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Vidarbha </h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/IIV85BQaLv9-_O6M1DR0Ng
+
+ "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Bahrain </h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/joinchat/Pf9ONhfGarsdyUq7pSBIhw"><i class="fab fa-telegram-plane"> </i> Join Now</a>
 
             </div>
 
