--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <a class="nav-link" href="/gallery.html">Gallery</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="/listing.html">Group List</a>
+              <a class="nav-link" href="/list.html">Group List</a>
             </li>
           </ul>
 
@@ -72,7 +72,7 @@
 
 
           <h1 class="title-heading">A community for like minded people</h1>
-          <a type="button" class="btn btn-dark btn-lg download-btn" href="/listing.html"><i class="fab fa-telegram-plane"></i> Join Now</a>
+          <a type="button" class="btn btn-dark btn-lg download-btn" href="/list.html"><i class="fab fa-telegram-plane"></i> Join Now</a>
         </div>
 
         <div class="col-lg-6 ">
@@ -136,7 +136,7 @@
   <section class="white-section" id="cta">
     <div class="container-fluid">
       <h1 class="cta-heading">To join the Avalon Regional groups</h1>
-      <a type="button" class="btn btn-dark btn-lg download-btn" href="/listing.html"><i class="fab fa-telegram-plane"></i> Click here</a>
+      <a type="button" class="btn btn-dark btn-lg download-btn" href="/list.html"><i class="fab fa-telegram-plane"></i> Click here</a>
     </div>
   </section>
 
