addded ahmedabad meetup pic to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -88,6 +88,9 @@
         <a href="gallery/pic-6.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4 pic-container">
           <img src="gallery/pic-6.jpg" class="img-fluid rounded">
         </a>
+        <a href="gallery/pic-7.webp" data-toggle="lightbox" data-gallery="gallery" class="col-md-4 pic-container">
+          <img src="gallery/pic-7.webp" class="img-fluid rounded">
+        </a>
       </div>
     </div>
 
