photo change for avalon insight

--- a/list.html
+++ b/list.html
@@ -123,7 +123,7 @@
 
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
-          <img class=" top-img" src="images/gaming.webp" alt="">
+          <img class=" top-img" src="images/avalon.webp" alt="">
           <h1>Avalon Insights</h1>
           <p class="listing-p">Contains insight from other groups and instagram, in case u missed</p>
           <a class="btn btn-light btn-lg top-btn" type="button" href="http://t.me/avaloninsights"><i class="fab fa-telegram-plane"> </i> Click here</a>
