--- a/list.html
+++ b/list.html
@@ -644,9 +644,9 @@
   <!-- sweetalert -->
   <script type="text/javascript">
     Swal.fire({
-      title: 'Avalon code is out',
-      text: 'If u havent checked it out click the link below',
-      imageUrl: '/alex.webp',
+      title: 'Pune Meetup on 22nd feb',
+      text: 'Join group to know more',
+      imageUrl: '/meetup.webp',
       imageWidth: 200,
       imageHeight: 300,
       imageAlt: 'Custom image',
@@ -659,7 +659,7 @@
       hideClass: {
         popup: 'animated bounceOut faster'
       },
-      footer: '<a href="https://avalon.army">Click here <i class="far fa-hand-point-left"></i> </a>'
+      footer: '<a href="http://t.me/avalonpune">Join Group <i class="far fa-hand-point-left"></i> </a>'
     })
   </script>
   <!-- Bootstrap scripts -->
