Avalon code is added and Surat group is added

--- a/list.html
+++ b/list.html
@@ -597,6 +597,19 @@
 
           </div>
         </div>
+        <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
+          <div class="card border-light">
+            <div class="card-header">
+              <h3 class="card-title">Avalon Surat </h3>
+            </div>
+            <div class="card-body">
+
+              <a class="btn btn-light btn-block btn-lg" type="button" href="https://t.me/joinchat/ELKHthU_vX55PDJpThwb-g "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+
+            </div>
+
+          </div>
+        </div>
 
       </div>
     </div>
@@ -644,9 +657,9 @@
   <!-- sweetalert -->
   <script type="text/javascript">
     Swal.fire({
-      title: 'Pune Meetup on 22nd feb',
-      text: 'Join group to know more',
-      imageUrl: '/meetup.webp',
+      title: 'Avalon Code is out now',
+      text: 'Check it out',
+      imageUrl: '/alex.webp',
       imageWidth: 200,
       imageHeight: 300,
       imageAlt: 'Custom image',
@@ -659,7 +672,7 @@
       hideClass: {
         popup: 'animated bounceOut faster'
       },
-      footer: '<a href="http://t.me/avalonpune">Join Group <i class="far fa-hand-point-left"></i> </a>'
+      footer: '<a href="http://avalon.army/">Click Here <i class="far fa-hand-point-left"></i> </a>'
     })
   </script>
   <!-- Bootstrap scripts -->
