added avalon books to the groups

--- a/list.html
+++ b/list.html
@@ -123,6 +123,12 @@
 
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
+          <img class=" top-img" src="images/books.png" alt="">
+          <h1>Avalon Books</h1>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/bookoholics"><i class="fab fa-telegram-plane"> </i> Click here</a>
+
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
           <img class=" top-img" src="images/avalon.webp" alt="">
           <h1>Avalon Insights</h1>
           <p class="listing-p">Contains insight from other groups and instagram, in case u missed <strong> Must Follow </strong></p>
@@ -604,7 +610,7 @@
             </div>
             <div class="card-body">
 
-              <a class="btn btn-light btn-block btn-lg" type="button" href="https://t.me/joinchat/ELKHthU_vX55PDJpThwb-g "><i class="fab fa-telegram-plane"> </i> Join Now</a>
+              <a class="btn btn-light btn-block btn-lg" type="button" href="https://t.me/avalonjalander "><i class="fab fa-telegram-plane"> </i> Join Now</a>
 
             </div>
 
