change in avalon indore link

--- a/list.html
+++ b/list.html
@@ -696,8 +696,8 @@
             </div>
             <div class="card-body">
 
-              <a class="btn btn-light btn-block btn-lg" type="button"
-                href="https://t.me/joinchat/O6CueR3C3rjZSFZkpDox6g"><i class="fab fa-telegram-plane"> </i> Join Now</a>
+              <a class="btn btn-light btn-block btn-lg" type="button" href="https://t.me/avalonforindore"><i
+                  class="fab fa-telegram-plane"> </i> Join Now</a>
 
             </div>
 
