changes dead avalon delhi link

--- a/list.html
+++ b/list.html
@@ -296,12 +296,12 @@
         <div class="card-col col-lg-4 col-md-6 col-sm-6 col-6">
           <div class="card border-light">
             <div class="card-header">
-              <h3 class="card-title">Avalon Delhi NCR</h3>
+              <h3 class="card-title">Avalon Delhi </h3>
             </div>
             <div class="card-body">
 
               <a class="btn btn-light btn-block btn-lg" type="button"
-                href=" https://t.me/joinchat/MMDHZE13k-1DP8dbklKG0w "><i class="fab fa-telegram-plane"> </i> Join
+                href=" https://t.me/joinchat/I--EORSKqn1yPg20jAvxoQ "><i class="fab fa-telegram-plane"> </i> Join
                 Now</a>
 
             </div>
