Added info in alt tags

--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active container-fluid">
-            <img src="/mumbai-1.webp" class="d-block w-100 test-img" alt="...">
+            <img src="/mumbai-1.webp" class="d-block w-100 test-img" alt="carousel images">
           </div>
           <div class="carousel-item container-fluid">
-            <img src="/mumbai-2.webp" class="d-block w-100 test-img" alt="...">
+            <img src="/mumbai-2.webp" class="d-block w-100 test-img" alt="carousel images">
           </div>
           <div class="carousel-item container-fluid">
-            <img src="/mumbai-3.webp" class="d-block w-100" alt="...">
+            <img src="/mumbai-3.webp" class="d-block w-100" alt="carousel images">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
