added avalon trading

--- a/list.html
+++ b/list.html
@@ -157,6 +157,14 @@
               class="fab fa-discord"> </i> Click here</a>
 
         </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 top-col">
+          <img class=" top-img" src="images/avalon.webp" alt="">
+          <h1>Avalon Trading</h1>
+          <p class="listing-p">All about trading over here</p>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonstocktrading"><i
+              class="fab fa-telegram-plane"> </i> Click here</a>
+
+        </div>
 
       </div>
     </div>
