--- a/list.html
+++ b/list.html
@@ -795,7 +795,10 @@
       <a href="https://www.instagram.com/avalon_army/"><i class="fab fa-instagram footer-ico"></i></a>
       <i class="fas fa-envelope footer-ico"></i>
 
-      <p>© Copyright 2020 AvalonArmy</p>
+      <p> <a style="color: white;" href="https://t.me/mannypanwar" type="button">Credit <i
+            class="fab fa-telegram-plane"> </i> Mannypanwar
+        </a>
+      </p>
     </div>
   </footer>
 
