added avalon meta queries group

--- a/list.html
+++ b/list.html
@@ -73,13 +73,29 @@
         <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
           <img class="top-img" src="images/avalon.webp" alt="">
           <h1>Avalon Army Main</h1>
+          <p class="listing-p">The main Group of <strong>Avalon Army</strong>   </p>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalontelegram"><i
+              class="fab fa-telegram-plane"> </i> Click here</a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
+          <img class="top-img" src="images/meta-queries.webp" alt="">
+          <h1>Avalon Meta Queries</h1>
+          <p class="listing-p">Group dedicated for  <strong>Only Meta related Queries </strong></p>
+
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonmetaqueries"><i
               class="fab fa-telegram-plane"> </i> Click here</a>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
           <img class="top-img" src="images/finance.webp" alt="">
           <h1>Avalon Meta Finance</h1>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/Ja-B4BaUuwhQg3hcg3-LKw"><i
+              class="fab fa-telegram-plane"> </i> Click here</a>
+
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
+          <img class=" top-img" src="images/marketing.jpg" alt="">
+          <h1>Avalon Meta Marketing</h1>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/I--EORV6aQTikLUvh3jB5A"><i
               class="fab fa-telegram-plane"> </i> Click here</a>
 
         </div>
@@ -97,13 +113,7 @@
               class="fab fa-telegram-plane"> </i> Click here</a>
 
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
-          <img class=" top-img" src="images/marketing.jpg" alt="">
-          <h1>Avalon Meta Marketing</h1>
-          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/I--EORV6aQTikLUvh3jB5A"><i
-              class="fab fa-telegram-plane"> </i> Click here</a>
-
-        </div>
+        
         <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
           <img class=" top-img" src="images/meme.webp" alt="">
           <h1>Avalon Memes</h1>
@@ -127,12 +137,7 @@
 
         </div>
 
-        <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
-          <img class=" top-img" src="images/music.webp" alt="">
-          <h1>Avalon Music</h1>
-          <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/JiaDIkTbKMa_UvDLY8-rAg"><i
-              class="fab fa-telegram-plane"> </i> Click here</a>
-        </div>
+        
         <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
           <img class=" top-img" src="images/sales.webp" alt="">
           <h1>Avalon Sales</h1>
@@ -186,6 +191,12 @@
             <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonwebflow"><i
                 class="fab fa-telegram-plane"> </i> Click here</a>
 
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
+            <img class=" top-img" src="images/music.webp" alt="">
+            <h1>Avalon Music</h1>
+            <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/joinchat/JiaDIkTbKMa_UvDLY8-rAg"><i
+                class="fab fa-telegram-plane"> </i> Click here</a>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
             <img class=" top-img" src="images/film.webp" alt="">
