Adding meta queries alert replacing avalon code

--- a/list.html
+++ b/list.html
@@ -836,10 +836,10 @@
 
 
     Swal.fire({
-      title: 'Avalon Code is out now',
-      text: 'Check it out',
-      imageUrl: '/alex.webp',
-      imageWidth: 200,
+      title: 'Avalon Meta Queries',
+      text: 'Msg here for issues related to Meta',
+      imageUrl: '/images/meta-queries.webp',
+      imageWidth: 300,
       imageHeight: 300,
       imageAlt: 'Custom image',
       showConfirmButton: false,
@@ -851,7 +851,7 @@
       hideClass: {
         popup: 'animated bounceOut faster'
       },
-      footer: '<a href="http://avalon.army/">Click Here <i class="far fa-hand-point-left"></i> </a>'
+      footer: '<a href="https://t.me/avalonmetaqueries"><i class="fab fa-telegram-plane"></i> Click Here </a>'
     })
   </script>
   <!-- Bootstrap scripts -->
