--- a/list.html
+++ b/list.html
@@ -80,7 +80,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
           <img class="top-img" src="images/meta-queries.webp" alt="">
           <h1>Avalon Meta Queries</h1>
-          <p class="listing-p">Group dedicated for  <strong>Only Meta related Queries </strong></p>
+          <p class="listing-p">Group dedicated for<strong> Meta related Queries </strong></p>
 
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalonmetaqueries"><i
               class="fab fa-telegram-plane"> </i> Click here</a>
