changing wordpress profile image

--- a/list.html
+++ b/list.html
@@ -73,7 +73,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
           <img class="top-img" src="images/avalon.webp" alt="">
           <h1>Avalon Army Main</h1>
-          <p class="listing-p">The main Group of <strong>Avalon Army</strong>   </p>
+          <p class="listing-p">The main Group of <strong>Avalon Army</strong> </p>
           <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/avalontelegram"><i
               class="fab fa-telegram-plane"> </i> Click here</a>
         </div>
@@ -113,7 +113,7 @@
               class="fab fa-telegram-plane"> </i> Click here</a>
 
         </div>
-        
+
         <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
           <img class=" top-img" src="images/meme.webp" alt="">
           <h1>Avalon Memes</h1>
@@ -137,7 +137,7 @@
 
         </div>
 
-        
+
         <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
           <img class=" top-img" src="images/sales.webp" alt="">
           <h1>Avalon Sales</h1>
@@ -186,7 +186,7 @@
 
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
-            <img class=" top-img" src="images/webdev.webp" alt="">
+            <img class=" top-img" src="images/wordpress.webp" alt="">
             <h1>Avalon Wordpress</h1>
             <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/Avalonwordpress"><i
                 class="fab fa-telegram-plane"> </i> Click here</a>
