inline style for now to the arrow

--- a/list.html
+++ b/list.html
@@ -245,8 +245,9 @@
 
         </div>
       </div>
-      <a href="javascript:showhide('appear')">
-        <i class="fas fa-angle-down click-more"></i>
+      <a style="text-decoration: none;" href="javascript:showhide('appear')">
+        <i style="display: block; " class="fas fa-angle-down click-more"></i>
+        <span>Click for more</span>
       </a>
     </div>
 
