changed avalon job picture

--- a/list.html
+++ b/list.html
@@ -179,7 +179,7 @@
 
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
-            <img class=" top-img" src="images/avalon.webp" alt="">
+            <img class=" top-img" src="images/avalon_job.webp" alt="">
             <h1>Avalon Jobs</h1>
             <a class="btn btn-light btn-lg top-btn" type="button" href="https://t.me/AvalonJobs"><i
                 class="fab fa-telegram-plane"> </i> Click here</a>
