avalon bihar link update

--- a/list.html
+++ b/list.html
@@ -349,8 +349,8 @@
             </div>
             <div class="card-body">
 
-              <a class="btn btn-light btn-block btn-lg" type="button"
-                href=" https://t.me/joinchat/LBH37hUSimLeC-aS0YTZOg "><i class="fab fa-telegram-plane"> </i> Join
+              <a class="btn btn-light btn-block btn-lg" type="button" href=" https://t.me/avalonbihar"><i
+                  class="fab fa-telegram-plane"> </i> Join
                 Now</a>
 
             </div>
