Avalon Discord Link update

--- a/list.html
+++ b/list.html
@@ -157,8 +157,8 @@
         <div class="col-lg-4 col-md-6 col-sm-6 col-6 top-col">
           <img class=" top-img" src="images/avalon.webp" alt="">
           <h1>Avalon Discord</h1>
-          <p class="listing-p">For audio discussion and listning to podcast together</p>
-          <a class="btn btn-light btn-lg top-btn" type="button" href="https://discord.gg/wwRe2dX"><i
+          <p class="listing-p">A complete collage experience</p>
+          <a class="btn btn-light btn-lg top-btn" type="button" href="http://bit.ly/avalonuniversitydiscord"><i
               class="fab fa-discord"> </i> Click here</a>
 
         </div>
@@ -885,8 +885,8 @@
 
 
     Swal.fire({
-      title: 'Avalon Meta Queries',
-      text: 'Msg here for issues related to Meta',
+      title: 'Avalon Discord',
+      text: 'The Avalon Community has moved to discord and is stronged then ever before',
       imageUrl: '/images/meta-queries.webp',
       imageWidth: 300,
       imageHeight: 300,
@@ -900,7 +900,7 @@
       hideClass: {
         popup: 'animated bounceOut faster'
       },
-      footer: '<a href="https://t.me/avalonmetaqueries"><i class="fab fa-telegram-plane"></i> Click Here </a>'
+      footer: '<a href="http://bit.ly/avalonuniversitydiscord"><i class="fab fa-telegram-plane"></i> Join Now </a>'
     })
   </script>
   <!-- Bootstrap scripts -->
