more typo changes 😅

--- a/list.html
+++ b/list.html
@@ -886,7 +886,7 @@
 
     Swal.fire({
       title: 'Avalon Discord',
-      text: 'The Avalon Community has moved to discord and is stronger then ever,  JOIN NOW 💜',
+      text: 'The Avalon Community has moved to discord and is stronger then ever',
       imageUrl: '/images/meta-queries.webp',
       imageWidth: 300,
       imageHeight: 300,
